assets/css/elements/content.css
/**
 * Post content.
 */

figure.wp-block-image {
    display: block;
    text-align: center;
    margin: 30px 0 0 0;
    position: relative;
    font-size: var(--font-size-caption);
    font-weight: var(--font-weight-bold);
}

.wp-block-image img {
    height: auto;
}

figure figcaption {
    text-align: center;
    margin-top: 0;
    position: relative;
    font-size: var(--font-size-caption);
    background-color: var(--color-lightgray);
    padding: 20px;
    word-break: break-all;
}

.wp-block-embed {
    text-align: center;
}


@media only screen and (min-width: 992px) {
    figure.wp-block-image {
        padding: 10px;
    }

}

/**
 * Lists.
 */
ol,
.comment-content ul,
.entry-content ul,
p {
    line-height: 32px;
    font-size: var(--font-size-paragraph);
    margin-bottom: 10px;
    letter-spacing: -0.065px;
}

.comment-content li {
    font-size: calc(var(--font-size-comment) - 1px);
}

ul {
    list-style-type: none;
}

@media only screen and (max-width: 991px) {
    ul {
        padding-left: 0;
    }
}

.comment-content ul,
.entry-content ul {
    margin: 20px 0;
}

.entry-content li {
    font-size: var(--font-size-list);
    margin: 4px 0;
}

.comment-content ul li::before,
.entry-content ul li::before {
    color: var(--color-quaternary);
    content: '\</>';
    display: inline-block;
    font-size: calc(var(--font-size-paragraph) - 4px);
    margin-right: 10px;
}

/**
 * Text content.
 */

i, em {
    background-color: var(--color-italic);
    padding: 4px 6px;
}

.entry-content a {
    color: var(--color-link);
    border-bottom: 1px solid var(--color-link);
}

.entry-content a:not(.wp-block-button__link):hover {
    color: var(--color-black);
    border-color: var(--color-black);
}

/**
 * Titles.
 */

h1, h2, h3, h4, h5, h6 {
    font-weight: var(--font-weight-bolder);
    padding-bottom: 0;
    padding-top: 60px;
    display: block;
}

h3, h4, h5, h6 {
    line-height: 32px;
}

h1 {
    padding-top: 0;
    font-size: var(--font-size-h1);
    position: relative;
    z-index: 10;
}

h2 {
    font-size: var(--font-size-h2);
}

h3 {
    font-size: var(--font-size-h3);
}

h4 {
    font-size: var(--font-size-h4);
}

h5 {
    font-size: var(--font-size-h5);
}

h6 {
    font-size: var(--font-size-h6);
}

/**
 * Format.
 */
pre:not(.wp-block-code) {
    font-size: var(--font-size-h5);
    line-height: 36px;
    margin: 20px 0 50px 0;
    padding: 30px;
    white-space: normal;
    color: var(--color-quaternary);
    position: relative;
}

pre:not(.wp-block-code)::after {
    content: '';
    position: absolute;
    bottom: 0px;
    left: 30px;
    width: 20px;
    height: 5px;
    background-color: var(--color-quaternary);
}

.wp-block-code {
    padding: 30px;
    margin: 30px 0;
    box-shadow: var(--box-shadow-default);
    overflow-x: auto;
    font-size: var(--font-size-code);
}

code {
    word-break: break-word;
    color: var(--color-grayer);
    padding: 0 5px;
    display: inline-block;
}

p code {
    background-color: var(--color-lightgray);
    color: var(--color-secondary);
}

.entry-content blockquote a {
    border-bottom: none;
    color: var(--color-black);
}

blockquote {
    color: var(--color-grayer);
    font-style: italic;
    padding: 40px 30px;
    margin: 30px 0;
    background-color: var(--color-lightgray);
    position: relative;
}

blockquote cite {
    color: #000;
    font-weight: var(--font-weight-bold);
    font-size: var(--font-size-caption);
    line-height: calc(var(--font-size-caption) * 2);
    margin-top: 15px;
    display: block;
}

blockquote::after {
    position: absolute;
    content: " ";
    font-size: 30px;
    background-image: url('/wp-content/themes/soyes/assets/images/icons/double-quotes-r.svg');
    background-repeat: no-repeat;
    background-size: cover;
    width: 30px;
    height: 30px;
    right: 20px;
    top: 10px;
}

/**
 * Video.
 */

iframe,
video {
    max-width: 100%
}

.wp-block-video,
.wp-block-image {
    margin: 30px 0;
}

/**
 * Date.
 */

.entry-date small {
    padding: 5px 10px;
    border: 1px solid var(--color-white);
}


@media only screen and (min-width: 992px) {

    blockquote {
        padding: 30px 130px 30px 50px;
    }

    pre:not(.wp-block-code) {
        padding: 30px 60px;
        font-size: var(--font-size-h4);
        margin: 40px 0 60px 0;
    }

    pre:not(.wp-block-code)::after {
        left: 60px;
    }
}

